<resources>
    <string name="app_name">Biodataku</string>
    <string name="nama_manggala_kagendra_zuhdissssss">Nama:Manggala Kagendra Zuhdi</string>
    <string name="kelas_no_absen_11_rpl_3">Kelas/No absen:11 RPL 3</string>
    <string name="asal_malang_cemorokandang">Asal:Malang,Cemorokandang</string>
    <string name="hari_ini_hanya_ini_yang_bisa_saya_tunjukkan_tunggu_sampai_pro_wkwk">hari ini hanya ini yang bisa saya tunjukkan,tunggu sampai pro wkwk</string>
    <string name="keinginan_bisa_menjadi_alhi_program_dan_bekerja_di_perusahaan_ternama">Keinginan:bisa menjadi alhi program dan bekerja di perusahaan ternama</string>
</resources>
